--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.9",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.12.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
@@ -34,8 +36,10 @@
     "@angular-devkit/build-angular": "^18.2.9",
     "@angular/cli": "^18.2.9",
     "@angular/compiler-cli": "^18.2.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/jasmine": "~5.1.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.19.76",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
