--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.12.0",
+    "nodemailer": "^6.10.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.17.2",
     "tslib": "^2.3.0",
@@ -41,6 +42,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.19.76",
+    "@types/nodemailer": "^6.4.17",
     "autoprefixer": "^10.4.20",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
