--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
@@ -40,6 +41,7 @@
     "@angular/compiler-cli": "^18.2.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.19.76",
