--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
+    "file-saver-es": "^2.0.5",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.12.0",
     "nodemailer": "^6.10.0",
