--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^13.0.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "crypto-js": "^4.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
@@ -42,6 +43,7 @@
     "@angular/cli": "^18.2.9",
     "@angular/compiler-cli": "^18.2.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^4.17.21",
     "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
