--- a/Backend/src/.env
+++ b/Backend/src/.env
@@ -6,6 +6,7 @@ DB_NAME=rmg2
 # Server port
 PORT=3000
 
-
+BASE_URL=http://localhost:4200
+# BASE_URL=https://apptesting.prominotech.com
 JWT_SECRET=my_super_secret_key
 JWT_EXPIRES_IN=7d
