--- a/Backend/src/.env
+++ b/Backend/src/.env
@@ -1,13 +1,9 @@
 # Database configuration
-# DB_HOST=localhost
-# DB_USER=root
-# DB_PASSWORD=root
-# DB_NAME=rmg2
-# Server port
 DB_HOST=localhost
-DB_USER=UserRmg
-DB_PASSWORD=Pass@123
-DB_NAME=rmg5
+DB_USER=root
+DB_PASSWORD=root
+DB_NAME=rmg2
+# Server port
 PORT=3000
 
 BASE_URL=http://localhost:4200
