--- a/Backend/src/.env
+++ b/Backend/src/.env
@@ -10,3 +10,9 @@ BASE_URL=http://localhost:4200
 # BASE_URL=https://apptesting.prominotech.com
 JWT_SECRET=my_super_secret_key
 JWT_EXPIRES_IN=7d
+
+# Azure AD Configuration
+AZURE_TENANT_ID=80c1821a-374b-4708-932a-09257bbfa0b9
+AZURE_CLIENT_ID=3ec506a0-5103-480c-8d76-e9eb77639ad7
+AZURE_CLIENT_SECRET=Jri8Q~k~QNuSEoF0CdJ3u5tHbYc5vP18sTjQYatQ
+AZURE_USER_EMAIL=donotreply@credenca.com
