Timesheet calnedar fix

--- a/Backend/src/.env
+++ b/Backend/src/.env
@@ -2,7 +2,7 @@
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=root
-DB_NAME=rmgProd
+DB_NAME=rmg2
 # Server port
 PORT=3000
 
@@ -13,7 +13,7 @@ JWT_EXPIRES_IN=7d
 
 # Azure AD Configuration
 # Azure AD Configuration
-AZURE_TENANT_ID=your_tenant_id
-AZURE_CLIENT_ID=your_client_id
-AZURE_CLIENT_SECRET=your_client_secret
+AZURE_TENANT_ID=80c1821a-374b-4708-932a-09257bbfa0b9
+AZURE_CLIENT_ID=3ec506a0-5103-480c-8d76-e9eb77639ad7
+AZURE_CLIENT_SECRET=Jri8Q~k~QNuSEoF0CdJ3u5tHbYc5vP18sTjQYatQ
 AZURE_USER_EMAIL=donotreply@credenca.com
